--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -83,6 +83,12 @@ body{
 .font-26{
     font-size: 26px;
 }
+.font-30{
+    font-size: 30px;
+}
+.font-35{
+    font-size: 35px;
+}
 .font-40{
     font-size: 40px;
 }
@@ -324,11 +330,43 @@ main{
     color: #DB4834;
     border: 1px solid #DB4834;
 }
-
+.order__confirm{
+    margin: 80px 80px;
+}
 /* Responsive */
+/* @media only screen and (max-width: 568px) {
+    
+} */
 @media only screen and (max-width: 768px) {
     main{
         padding: 0px 30px;
+    }
+    /* .font-16{
+        font-size: 8px;
+    }
+    .font-18{
+        font-size: 9px;
+    }
+    .font-20{
+        font-size: 10px;
+    } */
+    .font-22{
+        font-size: 11px;
+    }
+    .font-24{
+        font-size: 12px;
+    }
+    .font-26{
+        font-size: 12px;
+    }
+    .font-30{
+        font-size: 15px;
+    }
+    .font-35{
+        font-size: 18px;
+    }
+    .font-40{
+        font-size: 20px;
     }
     .font-60{
         font-size: 30px;
@@ -375,5 +413,15 @@ main{
     footer .nav-link{
         color: #201D1D;
         text-decoration: underline;
+    }
+    .order__confirm{
+        margin: 40px 0px;
+    }
+    .accordion-faq{
+        font-size: 16px;
+    }
+    .faq .accordion-body{
+        font-weight: 400;
+        font-size: 14px;
     }
 }
