--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -128,6 +128,10 @@ body{
     color: white!important;
     background-color: #DB4834!important;
 }
+.button-2:hover{
+        color: white!important;
+        background-color: #DB4834!important;
+}
 .btn-2{
     color: white;
     background-color: #F68373;
