--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -15,7 +15,9 @@ body{
     background-color: #FEF3F2;
 }
 .bg-orange-10{
-    background-color: #FEE5E2;
+    /* background-color: #FEE5E2; */
+    background-image: url(../images/page_banner.jpg);
+    background-position-y:center ;
 }
 .bg-orange-20{
     background-color: #FDD1CB;
