--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -16,7 +16,7 @@ body{
 }
 .bg-orange-10{
     /* background-color: #FEE5E2; */
-    background-image: url(../images/page_banner.jpg);
+    background-image: url(https://gaitonde.imersive.io/liveassets/Banner/126487492010184.jpeg);
     background-position-y:center ;
 }
 .bg-orange-20{
